# CCToDoLists

./: .gitignore  CCToDoManager.pro  LICENSE  README.md  flake.nix  icons.qrc  meson.build
Core/CCToDoTaskTreeMenuFactory/: CCToDoTreeCustomMenuFactory.cpp  CCToDoTreeCustomMenuFactory.h
Core/MarkDownParser/Exporter/: MarkdownExporter.cpp  MarkdownExporter.h
Core/MarkDownParser/Importer/: MarkdownImporter.cpp  MarkdownImporter.h
Core/MarkdownUtils/: MarkDownUtils.cpp  MarkDownUtils.h
Core/Task/: Task.cpp  Task.h
Core/TaskCreatorManager/: TaskCreateManager.cpp  TaskCreateManager.h
Core/TaskHelpUtils/: TaskHelpUtils.cpp  TaskHelpUtils.h
Core/TaskListsHandle/: TaskListsHandle.cpp  TaskListsHandle.h
DatabaseDriver/: CCToDoDataBase.cpp  CCToDoDataBase.h  CCToDoDataBaseImpl.cpp  CCToDoDataBaseImpl.h  DataBaseAdder.cpp  DataBaseAdder.h  DataBaseCommons.cpp  DataBaseCommons.h  DataBaseQuery.cpp  DataBaseQuery.h  DataBaseUpdater.cpp  DataBaseUpdater.h  DatabaseDeleter.cpp  DatabaseDeleter.h  TaskQueryAdapter.cpp  TaskQueryAdapter.h
Main/: main.cpp
Test/: DoTest.cpp  DoTest.h  TestAdd.cpp  TestAdd.h  TestDataBase.cpp  TestDataBase.h  TestDeleter.cpp  TestDeleter.h  TestQuery.cpp  TestQuery.h  TestSources.cpp  TestSources.h  TestTask.cpp  TestTask.h  TestUpdate.cpp  TestUpdate.h
Test/MarkDownTest/: TestMarkDownParse.cpp  TestMarkDownParse.h  sample.md  sample2.md  sample3.md
Test/utils/: TestHelpUtils.cpp  TestHelpUtils.h
Ui/CCToDoTreeDelegate/: CCToDoTreeWidgetDelegate.cpp  CCToDoTreeWidgetDelegate.h
Ui/CCToDoTreeWidget/: CCToDoTreeWidget.cpp  CCToDoTreeWidget.h
Ui/CCToDoTreeWidgetItem/: CCToDoTreeWidgetItem.cpp  CCToDoTreeWidgetItem.h
Ui/DisplayStatus/: DisplayStatus.cpp  DisplayStatus.h  DisplayStatus.ui
Ui/Externs/: LICENSE.url
Ui/Externs/lib/release/: components.lib
Ui/MainWindow/: CCToDoMainWindow.cpp  CCToDoMainWindow.h  CCToDoMainWindow.ui  MainWindowExternWidgetIniter.cpp  MainWindowExternWidgetIniter.h
Ui/MarkDownImportWindow/: MarkDownImportWindow.cpp  MarkDownImportWindow.h  MarkDownImportWindow.ui
Ui/MarkdownExportWindow/: MarkdownExportWindow.cpp  MarkdownExportWindow.h  MarkdownExportWindow.ui
Ui/TaskCreateWindow/: TaskCreateMainWindow.cpp  TaskCreateMainWindow.h  TaskCreateMainWindow.ui
Ui/TaskDisplayWindow/: TaskDisplayDialog.cpp  TaskDisplayDialog.h  TaskDisplayDialog.ui
Ui/TaskTreeWidgetItemFactory/: TaskTreeWidegtItemFactory.cpp  TaskTreeWidegtItemFactory.h
Ui/ToDoTreeWidgetHandler/: ToDoTreeWidgetHandler.cpp  ToDoTreeWidgetHandler.h
Ui/UiSources/: UiSources.cpp  UiSources.h
data/database/: TodoDataBase.db
subprojects/qt-material-widgets/: meson.build
subprojects/qt-material-widgets/components/: Makefile  components.pro  moc_predefs.h
